# SkillWiki

./: .gitignore  .gitmodules  DEMO_STARTUP.md  HANDOFF_README.md  README.md  RESTORE_SKILLOS_DEMO_STATE.bat  RESTORE_SKILLWIKI_DEMO_STATE.bat  START_SKILLOS_DEMO.bat  START_SKILLWIKI_DEMO.bat  STOP_SKILLOS_DEMO.bat  STOP_SKILLWIKI_DEMO.bat  docker-compose.yml
skillwiki/: README.md  USAGE_GUIDE.md  config.yaml  pyproject.toml  requirements.txt
skillwiki/benchmarks/: run_search_eval.py  skillwiki_demo_tasks.json
skillwiki/benchmarks/results/: demo_benchmark_latest.json  latest_summary.md  llm_eval_results_latest_local.json  search_eval_latest.json
skillwiki/skillos/: cli.py
skillwiki/skillos/api/routes/: graph.py  harness.py  lifecycle.py
skillwiki/skillos/layers/feedback_evolution/: __init__.py  evolution_engine.py
skillwiki/skillos/layers/input_knowledge/: __init__.py
skillwiki/skillos/layers/skill_construction/: formalizer.py
skillwiki/skillos/layers/skill_governance/: merger.py  skill_change_workflow.py
skillwiki/skillos/layers/skill_management/: auditor.py
skillwiki/skillos/layers/skill_runtime/: planner.py  retriever.py
skillwiki/skillos/models/: skill_model.py
skillwiki/skillos/storage/: base.py  postgres_db.py
skillwiki/skillos/tests/: test_governance_runtime_evolution.py  test_layers.py
skillwiki/skillos/utils/: llm_client.py
skillwiki/skillwiki/: __init__.py  cli.py
skillwiki/skillwiki/api/: __init__.py  deps.py  main.py  memory_store.py  schemas.py
skillwiki/skillwiki/api/routes/: evolution.py  execution.py  ingest.py  lifecycle.py  ws.py
skillwiki/skillwiki/config/: __init__.py  config_manager.py  llm_config.py
skillwiki/skillwiki/layers/: __init__.py
skillwiki/skillwiki/layers/feedback_evolution/: evolution_engine.py  monitor.py  repair.py
skillwiki/skillwiki/layers/input_knowledge/: base_parser.py  doc_parser.py  pipeline.py  script_analyzer.py  trajectory_parser.py
skillwiki/skillwiki/layers/skill_construction/: candidate_miner.py  (+2 more)
skillwiki/skillwiki/models/: skill_model.py
skillwiki/skillwiki/scripts/: init_db.py
skillwiki/skillwiki/tests/: test_governance_runtime_evolution.py  test_layers.py
skillwiki/skillwiki/utils/: logger.py
skillwiki/tests/: test_harness_api.py  test_harness_verifier_loop.py  test_heterogeneous_graph_p0.py  test_llm_client.py  test_skill_management_phase1.py  test_skill_runtime_phase1.py  test_skill_runtime_verifier_specs.py
(+714 files in other folders)
