[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillwiki"
version = "0.1.0"
description = "A Skill-Centric Knowledge Wiki for Self-Evolving Agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["agent", "skill", "llm", "ai", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.24",
    "click>=8.0",
    "python-json-logger>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
db = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "neo4j>=5.0",
    "redis>=4.0",
    "pymongo>=4.0",
]
api = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
]
ai = [
    "anthropic>=0.7",
    "openai>=1.0",
    "langchain>=0.1",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "pylint>=2.0",
    "mypy>=1.0",
]
all = [
    "skillwiki[db,api,ai,dev]",
]

[project.scripts]
skillwiki = "skillwiki.cli:cli"

[project.urls]
Homepage = "https://github.com/Huangdingcheng/skillos"
Repository = "https://github.com/Huangdingcheng/skillos"
Issues = "https://github.com/Huangdingcheng/skillos/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["skillwiki*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=skillwiki --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116", "R0903"]

[tool.coverage.run]
source = ["skillwiki"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
